Added rendering of svgs from smiles
